--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="./styles/styles.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
 
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
@@ -17,12 +17,14 @@
     <title>#Goals</title>
 </head>
 <body>
-    <div class="container is-fluid">
-        <div class="column is-full" id="goalsHeader">
-            <div class="is-large" id=goalsLogo>#Goals</div>
+    <div class="container" id="logoHeader">
+        <div class='card-content is-flex is-horizontal-center'>
+            <figure class="image has-image-centered"><img src="images/goals_logo.png" id="logo"></figure>
         </div>
     </div>
+
     <br><br>
+
     <div class="container">
 
         <div class="columns">
@@ -130,7 +132,15 @@
                 </div>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
     </div>
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <strong>#Goals</strong> was created by Team Ninja Dragons for Coding Bootcamp 2019.
+        </div>
+    </footer>
 
     <!-- JQuery References -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
