--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
 
     <br><br>
 
-    <div class="container is-centered">
+    <div class="container" id="mainBoxes">
 
         <div class="columns">
             <!-- Login to Account -->
             <div class="column is-one-third">
 
-                <div class="box">
+                <div class="box" id="loginBox">
                     <div class="content is-medium">
                         <h3>Login to Your Account</h3>
                     </div>
@@ -70,7 +70,7 @@
                     <br>
 
                     <div class="control">
-                            <button class="button is-link" id="loginAccount"> <p id="buttonText">Login</p></button>
+                            <button class="button is-link" id="loginAccount"> <p id="buttonText">LOGIN</p></button>
                     </div>
 
                 </div>
@@ -79,7 +79,7 @@
 
             <!-- Create an Account -->
             <div class="column is-one-third">
-                <div class="box">
+                <div class="box" id="createBox">
                     <div class="content is-medium">
                         <h3>Create an Account</h3>
                     </div>
@@ -158,9 +158,35 @@
                     </div>
                     <br>
                     <div class="control">
-                            <button class="button is-link" id="createAccount"><p id="buttonText">Create</p></button>
+                            <button class="button is-link" id="createAccount"><p id="buttonText">CREATE</p></button>
                     </div>
                 </div>
+            </div>
+            <!-- What is #Goals? -->
+            <div class="column is-one-third">
+
+                <div class="box" id="goalsBox">
+                    <div class="content is-medium">
+                        <h3 id="whatGoals">What is #Goals?</h3>
+                    </div>
+                    <ul>
+                        <img src="images/selectcategory.svg" style="width: 10%;">
+                        <li>Select a category for the goals you want to accomplish.</li>
+                        <br>
+                        <img src="images/yourgoals.svg" style="width: 10%;">
+                        <li>Add custom goals, or let #Goals select 10 goals to get you started.</li>
+                        <br>
+                        <img src="images/community.svg" style="width: 10%;">
+                        <li>Connect with people in the #Goals community to find encouragement or a goal buddy.</li>
+                        <br>
+                        <img src="images/completegoals.svg" style="width: 10%;">
+                        <li>Complete your goals to land on our Champions Board!</li>
+                        <br>
+                        <img src="images/slacker.svg" style="width: 10%;">
+                        <li>Failling to meet your goals? We'll call you out on it!</li>
+                    </ul>
+                </div>
+
             </div>
         </div>
         <br>
