--- a/public/community.html
+++ b/public/community.html
@@ -54,10 +54,11 @@
 
     <!-- Header -->
     <div class="container is-fluid">
-        <div class="column is-full" id="goalsHeader">
-            <div class="is-large" id=goalsLogo>#Community</div>
+        <div class="column is-full" id="welcomeHeader">
+            <h3 class="text-is-centered" id=communityText>COMMUNITY</h3>
         </div>
     </div>
+
     <br><br>
 
     <div class="container">
@@ -127,7 +128,6 @@
                     </div>
 
                     <div id="postedMessages">
-
                         <!-- This is the div that will be created with each post -->
                         <div class="box">
                             <article class="media">
@@ -156,45 +156,42 @@
                                 </div>
                             </article>
                         </div>
-
-                        <div class="box">
-                            <article class="media">
-                                <figure class="media-left">
-                                    <p class="image is-64x64">
-                                        <img src="https://bulma.io/images/placeholders/128x128.png">
-                                    </p>
-                                </figure>
-                                <div class="media-content">
-                                    <div class="field">
-                                        <p class="control">
-                                            <textarea class="textarea" placeholder="Add a comment..."></textarea>
-                                        </p>
-                                    </div>
-                                    <nav class="level">
-                                        <div class="level-left">
-                                            <div class="level-item">
-                                                <a class="button is-info" id="postButton">Post!</a>
-                                            </div>
-                                        </div>
-                                        <div class="level-right">
-                                            <div class="level-item">
-                                                <label class="checkbox">
-                                                    <input type="checkbox"> Press enter to submit
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </nav>
-                                </div>
-                            </article>
-
-                        </div>
-
                     </div>
-
                 </div> <!-- Box End -->
             </div> <!-- Full Columnn End-->
         </div> <!-- Columns End -->
+        <!-- Add a Message -->
+        <div class="box">
+            <article class="media">
+                <figure class="media-left">
+                    <p class="image is-64x64">
+                        <img src="https://bulma.io/images/placeholders/128x128.png">
+                    </p>
+                </figure>
+                <div class="media-content">
+                    <div class="field">
+                        <label class="label">Your Name</label>
+                        <input class="input" id="postName" type="text" placeholder="Enter Name">
+                    </div>
+                    <div class="field">
+                        <label class="label">Message</label>
+                        <p class="control">
+                            <textarea class="textarea" placeholder="Add a comment..."></textarea>
+                        </p>
+                    </div>
+                    <button class="button" id="postButton"><p id="buttonText">POST MESSAGE</p></button>
+                </div>
+            </article>
+        </div>
     </div> <!-- Container End -->
+    <br>
+    <br>
+    <br>
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <strong>#Goals</strong> was created by Team Ninja Dragons for Coding Bootcamp 2019.
+        </div>
+    </footer>
 
     <!-- JQuery References -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
