--- a/public/user.html
+++ b/public/user.html
@@ -56,9 +56,13 @@
     </nav>
 
     <!-- Welcome Message -->
-    <div class="container is-fluid">
-        <div class="column is-full" id="welcomeHeader">
-            <h3 class="text-is-centered" id=welcomeText>WELCOME BACK.</h3>
+    <div class="container">
+        <div class="columns">
+            <div class="column is-full">
+                <p class="animated fadeInDown delay-2s" id=welcomeText>
+                    WELCOME BACK.
+                </p>
+            </div>
         </div>
     </div>
 
@@ -126,7 +130,7 @@
     <br>
     <br>
     <footer class="footer">
-        <div class="content has-text-centered">
+        <div class="content has-text-centered animated fadeInDown delay-2s">
             <strong>#Goals</strong> was created by Team Ninja Dragons for Coding Bootcamp 2019.
         </div>
     </footer>
