new goal create

--- a/public/user.html
+++ b/public/user.html
@@ -108,13 +108,13 @@
 
                     <div class="field">
                         <label class="label">Name Your Goal</label>
-                        <input class="input" type="text" placeholder="Goal Name">
+                        <input class="input" id="goalTitle" type="text" placeholder="Goal Name">
                     </div>
 
                     <div class="field">
                         <label class="label">Goal Description</label>
                         <p class="control">
-                            <textarea class="textarea" placeholder="Add a description of the goal..."></textarea>
+                            <textarea class="textarea" id="goalDescriptionBox" placeholder="Add a description of the goal..."></textarea>
                         </p>
                     </div>
                     <div class="level-left">
