goalsMade increment working

--- a/public/user.html
+++ b/public/user.html
@@ -132,7 +132,7 @@
     <br>
 
     <!-- Delete Goal Modal -->
-    <div class="modal is-active" id="deleteGoalModal">
+    <div class="modal" id="deleteGoalModal">
         <div class="modal-background"></div>
         <div class="modal-card" style="width: 700px;">
             <header class="modal-card-head">
