--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,8 @@
                 <br>
             </section>
             <footer class="modal-card-foot">
-                <button class="button is-success is-right">OK</button>
+                <button aria-label="close" class="delete close-modal"></button>
+                <button class="button is-success is-right" id="closeModal1">OK</button>
             </footer>
         </div>
     </div>
@@ -238,7 +239,7 @@
                 <br>
             </section>
             <footer class="modal-card-foot">
-                <button class="button is-success">OK</button>
+                <button class="button is-success" id="closeModal2">OK</button>
             </footer>
         </div>
     </div>
