--- a/public/community.html
+++ b/public/community.html
@@ -178,7 +178,7 @@
                                     <div class="field">
                                         <label class="label">Message</label>
                                         <p class="control">
-                                            <textarea class="textarea" placeholder="Add a comment..."></textarea>
+                                            <textarea class="textarea" id="postBody" placeholder="Add a comment..."></textarea>
                                         </p>
                                     </div>
                                     <button class="button" id="postButton"><p id="buttonText">POST MESSAGE</p></button>
@@ -203,5 +203,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Script File -->
     <script src="./js/site.js"></script>
+    <script src="./js/community.js"></script>
+
 </body>
 </html>
