--- a/public/community.html
+++ b/public/community.html
@@ -145,7 +145,7 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p>
-                                            <strong id="postName">John Smith</strong> <small id="postUsername">@johnsmith</small> <small id="postTime">31m</small>
+                                            <strong id="exampleName">John Smith</strong> <small id="postUsername">@johnsmith</small> <small id="postTime">31m</small>
                                             <p id="postMessage">This is where the message will get posted!</p>
                                         </p>
                                     </div>
@@ -203,7 +203,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Script File -->
     <script src="./js/site.js"></script>
-    <script src="./js/community.js"></script>
+    <script src="./js/userGoals.js"></script>
 
 </body>
 </html>
