--- a/public/community.html
+++ b/public/community.html
@@ -138,7 +138,7 @@
                     </div>
 
                     <div id="postedMessages">
-
+                        <div id="messagesBoxes">
                         <!-- This is the div that will be created with each post -->
                         <div class="box">
                             <article class="media">
@@ -169,7 +169,7 @@
                                 </div>
                             </article>
                         </div>
-
+</div>
                         <!-- Post a Message -->
                         <div id="postMessageBox">
                             <article class="media">
