community page works

--- a/public/community.html
+++ b/public/community.html
@@ -213,6 +213,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Script File -->
     <script src="./js/site.js"></script>
+    <script src="./js/shameAndFame.js"></script>
 </body>
 
 </html>
