messages printing to page
Got the very basic message printing to page working. Added top margin of 10px to the new message input form so it doesn't cut off the bottom of the latest message post.

--- a/public/community.html
+++ b/public/community.html
@@ -152,7 +152,7 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p>
-                                            <strong id="postName">John Smith</strong> <small
+                                            <strong id="postNameExample">John Smith</strong> <small
                                                 id="postUsername">@johnsmith</small> <small id="postTime">31m</small>
                                             <p id="postMessage">This is where the message will get posted!</p>
                                         </p>
